@@ -187,6 +187,9 @@ Working version
 - GPR#2185: Add `List.filter_map`
   (Thomas Refis, review by Alain Frisch and Gabriel Scherer)
 
+- GPR#2200: harden parsing of OCAMLRUNPARAM for Hashtbl.is_randomized ()
+  (David Allsopp)
+
 ### Other libraries:
 
 - GPR#1061: Add ?follow parameter to Unix.link. This allows hardlinking
